deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mbdsite
  namespace: ethosengine
  labels:
    app: mbdsite
    app.kubernetes.io/version: DEPLOY_VERSION_PLACEHOLDER
    app.kubernetes.io/managed-by: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mbdsite
  template:
    metadata:
      labels:
        app: mbdsite
        app.kubernetes.io/version: DEPLOY_VERSION_PLACEHOLDER
    spec:
      containers:
      - name: mbdsite
        image: harbor.ethosengine.com/ethosengine/mbdsite:IMAGE_TAG_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: mbdsite-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: mbdsite-service
  namespace: ethosengine
spec:
  selector:
    app: mbdsite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbdsite-ingress
  namespace: ethosengine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: public
  tls:
  - hosts:
    - ethosengine.com
    secretName: mbdsite-tls-cert
  rules:
  - host: ethosengine.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbdsite-service
            port:
              number: 80
